@@ -1,16 +1,0 @@
-NAME
-    Dist::Zilla::PluginBundle::DROLSKY - DROLSKY's plugin bundle
-
-VERSION
-    version 0.09
-
-AUTHOR
-    Dave Rolsky <autarch@urth.org>
-
-COPYRIGHT AND LICENSE
-    This software is Copyright (c) 2014 by Dave Rolsky.
-
-    This is free software, licensed under:
-
-      The Artistic License 2.0 (GPL Compatible)
-
